# factored-offline-rl

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture_diagram.md
examples/: synthetic_data_example.py
manuscripts/: appendix.md  main_manuscript.md  revision_letter.md
models/: fairness_constraints.py  lstm_policy_network.py
scripts/: build_enhanced_dataset.py  compare_all_models.py  compile_results.py  create_sequence_dataset.py  extract_enhanced_features.py  generate_figures_final.py  hyperparameter_search.py  phase1_factored_actions.py  phase1_fast.py  phase1_fast_1pct.py  phase1_fast_fixed.py  phase1_prepare_10pct.py  phase1_prepare_v3_data.py  phase1_prepare_v3_data_optimized.py  phase2_train_1pct.py  phase2_train_full.py  phase2_train_lstm_fixed.py  phase2_train_lstm_simplified.py  phase3_evaluate.py  phase3_evaluate_production.py  reward_shaping.py  sensitivity_analysis.py  statistical_analysis.py  subgroup_analysis.py  train_feedforward_baseline.py  train_lstm_noattention.py  train_lstm_policy_final.py  visualize_attention.py
scripts/03_revision_analyses/: mediation_analysis.py  proportional_parity_analysis.py  redraw_figure1.py  reward_weight_sensitivity.py  run_cql_baseline.py  window_length_sensitivity.py
src/: __init__.py  audit_fairness.py  evaluate_policy.py  factored_action_space.py  offline_rl_policy_awr.py  phase2_train_full.py  phase3_evaluate.py  reward_shaping.py  sensitivity_analysis.py  subgroup_analysis.py
